--- a/app/scripts/views/biz/lessons/update.html
+++ b/app/scripts/views/biz/lessons/update.html
@@ -10,9 +10,9 @@
             <h3 class="panel-title inlineBlock" show-role="'admin,op'" ng-if="$stateParams.lesson_id">修改课程</h3>
             <h3 class="panel-title inlineBlock" show-role="'!admin,op'" ng-if="$stateParams.lesson_id">课程详情</h3>
             <!--<a href="javascript:void(0)" class="btn btn-success btn-rounded pull-right btn-xs"-->
-               <!--ng-click="title_info = [1,1,1,1,1,1]">展开模块</a>&nbsp;&nbsp;&nbsp;&nbsp;-->
+            <!--ng-click="title_info = [1,1,1,1,1,1]">展开模块</a>&nbsp;&nbsp;&nbsp;&nbsp;-->
             <!--<a href="javascript:void(0)" class="btn btn-success btn-rounded pull-right btn-xs"-->
-               <!--ng-click="title_info = [0,0,0,0,0,0]">合并模块</a>-->
+            <!--ng-click="title_info = [0,0,0,0,0,0]">合并模块</a>-->
         </div>
         <div class="panel-body">
             <form class="form-horizontal" name="FormBody" novalidate ng-init="title_info = [1,1,1,1,1,1]"
@@ -32,7 +32,8 @@
                         <div form-input text="课程名称" ng-model="param.name" placeholder="不超过25个字" required="true"
                              minlength="1" maxlength="25"></div>
 
-                        <div form-input text="总课时" ng-model="param.mission_num" type="number" min="0" required="true"></div>
+                        <div form-input text="总课时" ng-model="param.mission_num" type="number" min="0"
+                             required="true"></div>
 
                         <div form-select text="负责教师" ng-model="param.teacher_id" required="true"
                              source="$root.teacher_list" source-api=""></div>
@@ -137,6 +138,7 @@
                                                 <input type="checkbox" ng-model="item.selected"
                                                        name="{{item.option_id}}"
                                                        ng-checked="item.selected"
+                                                       ng-disabled="item.disabled"
                                                        ng-click="updateSelection($event,$index)">
                                                 <span></span>选择
                                             </label>
