更新菜单功能

--- a/app/styles/bootstrap/index.css
+++ b/app/styles/bootstrap/index.css
@@ -5943,7 +5943,7 @@ button.close {
     bottom: 0;
     left: 0;
     z-index: 1040;
-    background-color: #000
+    background-color: #172B4D;
 }
 
 .modal-backdrop.fade {
