--- a/app/scripts/views/biz/support/version.html
+++ b/app/scripts/views/biz/support/version.html
@@ -1,21 +1,22 @@
 <div class="dashboard-page ">
     <div class="panel panel-primary">
         <div class="panel-heading">
-            <h3 class="panel-title">version</h3>
+            <h3 class="panel-title">后台更新版本</h3>
         </div>
         <div class="panel-body">
             <form class="form-horizontal" name="FormBody" novalidate>
                 <div class="panel panel-primary">
                     <div class="panel-body">
-                        <div class="col-sm-8">
-                            <h4>新增开通城市</h4>
-                            <div class="form-group">
-                                <div form-date-time ng-model="param.version"></div>
-                            </div>
+                        <div class="form-group">
+                            <h1 class="text-danger col-sm-offset-2">版本更新,非管理员勿操作</h1>
+                        </div>
+                        <div class="form-group">
+                            <div form-date-time ng-model="version" text="上次版本日期"></div>
+                            <div form-date-time ng-model="param.version" text="新的版本日期" required="true"></div>
                         </div>
                     </div>
                 </div>
-                <a class="btn btn-success btn-rounded" ng-disabled="FormBody.$invalid" ng-click="submit()">提交</a>
+                <a class="btn btn-success btn-rounded" ng-disabled="FormBody.$invalid" ng-click="submit()">更新版本</a>
             </form>
         </div>
     </div>
