--- a/app/scripts/views/biz/mission/update.html
+++ b/app/scripts/views/biz/mission/update.html
@@ -24,7 +24,8 @@
 
                         <div form-textarea text="任务描述" ng-model="param.description" required="true"></div>
 
-                        <div form-sources text="任务图片" ng-model="param.sources" max="100" type="1"></div>
+                        <div form-sources text="任务图片" ng-model="param.sources" max="100" type="1"
+                             token="taskstudy"></div>
 
                         <div form-textarea text="任务备注" ng-model="param.remark" placeholder="不超过100个字"></div>
 
