--- a/app/scripts/views/directive/product/product-option.html
+++ b/app/scripts/views/directive/product/product-option.html
@@ -1,7 +1,7 @@
 <div>
-    <div ng-repeat="item in data.options">
-        <span ng-if="item.option_name" ng-bind="($index+1)+'.'+item.option_name"></span>
-        <span ng-if="item.option_name" ng-bind="':￥' +item.option_price"></span>
+    <p ng-repeat="item in data.options">
+        <span ng-if="item.option_name" ng-bind="($index+1)+') : '+item.option_name"></span>
+        <span ng-if="item.option_name" ng-bind="'/￥' +item.option_price"></span>
         <br/>
-    </div>
+    </p>
 </div>
