verison showtip 展示今天提示

--- a/app/scripts/views/biz/support/version.html
+++ b/app/scripts/views/biz/support/version.html
@@ -12,7 +12,8 @@
                         </div>
                         <div class="form-group">
                             <div form-date-time ng-model="version" text="上次版本日期"></div>
-                            <div form-date-time ng-model="param.version" text="新的版本日期" required="true"></div>
+                            <div form-date-time ng-model="param.version" text="新的版本日期" required="true"
+                                 showtip="默认今天"></div>
                         </div>
                     </div>
                 </div>
