增加 是否需要购买保险 字段

--- a/app/scripts/views/biz/act/update.html
+++ b/app/scripts/views/biz/act/update.html
@@ -203,6 +203,10 @@
                         <div form-radio text="是否需填写Email" type="radio" ng-model="param.show_email" required="true"
                              default="2" source="[{text:'是',value:'1'},{text:'否',value:'2'}]" source-api=""></div>
 
+                        <div form-radio text="是否需要购买保险" ng-model="param.baby_insure" default="2"
+                             source="[{text:'是',value:'1'},{text:'否',value:'2'}]"
+                             required="true"></div>
+
                     </div>
                 </div>
                 <div class="panel panel-primary">
