各种优化和修改
1：成对的日期 时间 一行展示
2：不同的图片不可以拖拽
3：checkbox 设置默认值 覆盖城市默认值是上海
4：回家么系统登陆界面的标题和icon 修改
5：增加拼团结束类型 的radio 修改

--- a/app/scripts/views/directive/hjm_date.html
+++ b/app/scripts/views/directive/hjm_date.html
@@ -1,5 +1,5 @@
-<div class="datepicker_class">
-    <p class="input-group appendTimepicker">
+<div class="datepicker_class pull-left">
+    <p class="input-group appendTimepicker" style="float: left;width: 200px;">
         <input type="text" class="form-control" uib-datepicker-popup ng-model="dt" is-open="isopen" min-date="minDate"
                date-disabled="disabled(date, mode)" ng-change="changed();" close-text="关闭" clear-text="清空"
                ng-disabled="disabled" current-text="今天" style="width: 160px;"/>
@@ -9,4 +9,5 @@
             </button>
         </span>
     </p>
+    <span class="" style="float: left;width: 107px;"></span>
 </div>
