--- a/app/scripts/views/directive/hjm_date_time.html
+++ b/app/scripts/views/directive/hjm_date_time.html
@@ -1,4 +1,4 @@
-<div class="datepicker_class row">
+<div class="datepicker_class row pull-left">
     <div class="col-md-12 pull-left">
         <p class="input-group appendTimepicker" style="float: left;width: 200px;">
             <input type="text" class="form-control" uib-datepicker-popup ng-model="dt" is-open="isopen"
