--- a/app/scripts/views/container/login.html
+++ b/app/scripts/views/container/login.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-md-4 col-lg-4 col-md-offset-4 col-lg-offset-4">
             <img src="styles/images/flat-avatar.png" class="user-avatar">
-            <h2>芝麻学社管理系统</h2>
+            <h2>Ahaschool芝麻学社 管理系统</h2>
             <form role="form" ng-keypress="login_keypress($event);">
                 <div class="form-content">
                     <div class="form-group">
@@ -16,7 +16,7 @@
                     </div>
                     <div class="form-group" style="display: flex;">
                         <input type="text" ng-model="usercode" class="form-control input-underline pull-left"
-                               placeholder="验证码" >
+                               placeholder="验证码">
                         <a class="btn btn-white btn-outline pull-right" ng-click="get_verify_code()"
                            ng-disabled="disabled_get_verify_code">获取验证码
                             <span ng-if="remain_time<time_count" ng-bind="remain_time"></span>
