--- a/app/scripts/views/biz/orders/update.html
+++ b/app/scripts/views/biz/orders/update.html
@@ -33,7 +33,7 @@
                              ng-if="param.apply_mode==2"></div>
 
                         <div form-textarea text="用户ID" ng-model="user_ids" required="true"
-                             data-placeholder="用户ID,英文逗号隔开填写多个"></div>
+                             data-placeholder="用户ID,英文逗号隔开填写多个成一行,或者每行写一个不要逗号"></div>
                     </div>
                 </div>
                 <div form-error-block></div>
